versioned_docs/version-2.10.0/Configuration/config_options.md
---
id: config_options
title: Available User Options
---

| `init.lua` table key              | Expected Format                    | Use Case                                                                                                                   | Alternate File Path (in `user/` folder) |
| --------------------------------- | ---------------------------------- | -------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- |
| `updater`                         | `table` or `function(table)...end` | The configuration for the AstroNvim updater                                                                                | `updater.lua`                           |
| `colorscheme`                     | `string`                           | The colorscheme to be set                                                                                                  | `colorscheme.lua`                       |
| `highlights.init`                 | `table` or `function(table)...end` | Custom highlight groups for the all colorschemes                                                                           | `highlights/init.lua`                   |
| `highlights.<colorscheme>`        | `table` or `function(table)...end` | Custom highlight groups for the specified theme, replace `<colorscheme>` with colorscheme name                             | `highlights/<colorscheme>.lua`          |
| `icons`                           | `table` or `function(table)...end` | Customize the icons used in the user interface                                                                             | `icons.lua`                             |
| `text_icons`                      | `table` or `function(table)...end` | Customize the text based icons used in the user interface when `vim.g.icons_enabled = false`                               | `text_icons.lua`                        |
| `options`                         | `table` or `function(table)...end` | The `vim.x.y` variables to be set                                                                                          | `options.lua`                           |
| `header`                          | table of `string`s                 | The header to be displayed on the Dashboard                                                                                | `header.lua`                            |
| `ui`                              | `table` or `function(table)...end` | Toggle custom UI elements (`nui_input` controls NUI for inputs, `telescope_select` controls Telescope for selections)      | `ui.lua`                                |
| `polish`                          | `function()...end`                 | Lua function to be run last. Good place for setting vim options and adding mappings                                        | `polish.lua`                            |
| `default_theme.diagnostics_style` | `table` or `string`                | Set highlight style options for virtual text                                                                               | `default_theme/diagnostics_style.lua`   |
| `default_theme.colors`            | `table` or `function(table)...end` | Modify the default theme's color table                                                                                     | `default_theme/colors.lua`              |
| `default_theme.highlights`        | `table` or `function(table)...end` | Modify the default theme's highlight groups                                                                                | `default_theme/highlights.lua`          |
| `default_theme.plugins`           | `table` or `function(table)...end` | Modify the default theme's enabled plugin highlight groups                                                                 | `default_theme/plugins.lua`             |
| `diagnostics`                     | `table` or `function(table)...end` | Modify the default vim diagnostics options                                                                                 | `diagnostics.lua`                       |
| `luasnip`                         | `table` or `function(table)...end` | Modify available `luasnip` options                                                                                         | `luasnip.lua`                           |
| `plugins.init`                    | `table` or `function(table)...end` | Modify the default plugins table such as adding new plugins                                                                | `plugins/init.lua`                      |
| `plugins.aerial`                  | `table` or `function(table)...end` | Modify the `aerial.setup()` options                                                                                        | `plugins/aerial.lua`                    |
| `plugins.autopairs`               | `table` or `function(table)...end` | Modify the `autopairs.setup()` options                                                                                     | `plugins/autopairs.lua`                 |
| `plugins.better_escape`           | `table` or `function(table)...end` | Modify the `better_escape.setup()` options                                                                                 | `plugins/better_escape.lua`             |
| `plugins.bufferline`              | `table` or `function(table)...end` | Modify the `bufferline.setup()` options                                                                                    | `plugins/bufferline.lua`                |
| `plugins.cmp`                     | `table` or `function(table)...end` | Modify the `cmp.setup()` options                                                                                           | `plugins/cmp.lua`                       |
| `plugins.colorizer`               | `table` or `function(table)...end` | Modify the `colorizer.setup()` options                                                                                     | `plugins/colorizer.lua`                 |
| `plugins.Comment`                 | `table` or `function(table)...end` | Modify the `Comment.setup()` options                                                                                       | `plugins/Comment.lua`                   |
| `plugins.dapui`                   | `table` or `function(table)...end` | Modify the `dapui.setup()` options                                                                                         | `plugins/dapui.lua`                     |
| `plugins.gitsigns`                | `table` or `function(table)...end` | Modify the `gitsigns.setup()` options                                                                                      | `plugins/gitsigns.lua`                  |
| `plugins.nvim-web-devicons`       | `table` or `function(table)...end` | Modify the `nvim-web-devicons.setup()` options                                                                             | `plugins/nvim-web-devicons.lua`         |
| `plugins.indent_blankline`        | `table` or `function(table)...end` | Modify the `indent_blankline.setup()` options                                                                              | `plugins/indent_blankline.lua`          |
| `plugins.indent-o-matic`          | `table` or `function(table)...end` | Modify the `indent-o-matic.setup()` options                                                                                | `plugins/indent-o-matic.lua`            |
| `plugins.heirline`                | `table` or `function(table)...end` | Modify the `heirline.setup()` options                                                                                      | `plugins/heirline.lua`                  |
| `plugins.lspkind`                 | `table` or `function(table)...end` | Modify the `lspkind.init()` options                                                                                        | `plugins/lspkind.lua`                   |
| `plugins.mason`                   | `table` or `function(table)...end` | Modify the `mason.setup()` options                                                                                         | `plugins/mason.lua`                     |
| `plugins.mason-lspconfig`         | `table` or `function(table)...end` | Modify the `mason-lspconfig.setup()` options                                                                               | `plugins/mason-lspconfig.lua`           |
| `plugins.mason-null-ls`           | `table` or `function(table)...end` | Modify the `mason-null-ls.setup()` options                                                                                 | `plugins/mason-null-ls.lua`             |
| `plugins.mason-nvim-dap`          | `table` or `function(table)...end` | Modify the `mason-nvim-dap.setup()` options                                                                                | `plugins/mason-nvim-dap.lua`            |
| `plugins.neo-tree`                | `table` or `function(table)...end` | Modify the `neo-tree.setup()` options                                                                                      | `plugins/neo-tree.lua`                  |
| `plugins.null-ls`                 | `table` or `function(table)...end` | Modify the `null-ls.setup()` options                                                                                       | `plugins/null-ls.lua`                   |
| `plugins.telescope`               | `table` or `function(table)...end` | Modify the `telescope.setup()` options                                                                                     | `plugins/telescope.lua`                 |
| `plugins.toggleterm`              | `table` or `function(table)...end` | Modify the `toggleterm.setup()` options                                                                                    | `plugins/toggleterm.lua`                |
| `plugins.treesitter`              | `table` or `function(table)...end` | Modify the `treesitter.setup()` options                                                                                    | `plugins/treesitter.lua`                |
| `plugins.which-key`               | `table` or `function(table)...end` | Modify the `which-key.setup()` options                                                                                     | `plugins/which-key.lua`                 |
| `plugins.window-picker`           | `table` or `function(table)...end` | Modify the `window-picker.setup()` options                                                                                 | `plugins/window-picker.lua`             |
| `which-key.register`              | `table` or `function(table)...end` | Modify the default which-key bindings                                                                                      | `which-key/register.lua`                |
| `which-key.show`                  | `function(orig_show)...end`        | Modify the default `which-key.show()` method. Must return `function(key, opts)...end`                                      | `which-key/show.lua`                    |
| `cmp.source_priority`             | `table` or `function(table)...end` | Modify the default cmp sources and their priorities                                                                        | `cmp/source_priority.lua`               |
| `cmp.setup`                       | `table` or `function(table)...end` | Modify the extended `cmp` setup calls                                                                                      | `cmp/setup.lua`                         |
| `heirline.colors`                 | `table` or `function(table)...end` | Modify the section colors used by Heirline                                                                                 | `heirline/colors.lua`                   |
| `heirline.attributes`             | `table` or `function(table)...end` | Modify the section highlight attributes used by Heirline                                                                  | `heirline/attributes.lua`               |
| `heirline.separators`             | `table` or `function(table)...end` | Modify the section separators used by Heirline                                                                             | `heirline/separators.lua`               |
| `heirline.icon_highlights`        | `table` or `function(table)...end` | Modify which components should do dynamic icon highlighting Heirline                                                       | `heirline/icon_highlights.lua`          |
| `nvim-autopairs`                  | `table` or `function(table)...end` | Modify exposed options for `nvim-autopairs` such as adding rules                                                           | `nvim-autopairs.lua`                    |
| `dap.adapters`                    | `table` or `function(table)...end` | Table of DAP adapters to be set up                                                                                         | `dap/adapters.lua`                      |
| `dap.configurations`              | `table` or `function(table)...end` | Table of DAP configurations to be set up                                                                                   | `dap/configurations.lua`                |
| `lsp.servers`                     | `table` or `function(table)...end` | List of language servers to be set up that are already installed without `mason`                                           | `lsp/servers.lua`                       |
| `lsp.skip_setup`                  | `table` or `function(table)...end` | List of language servers to guarantee the lspconfig setup is never called on automatically                                 | `lsp/skip_setup.lua`                    |
| `lsp.server-settings.<lsp>`       | `table` or `function(table)...end` | Modify the LSP server settings, replace `<lsp>` with server name                                                           | `lsp/server-settings/<lsp>.lua`         |
| `lsp.on_attach`                   | `function(client, bufnr)...end`    | Modify the default LSP `on_attach` function                                                                                | `lsp/on_attach.lua`                     |
| `lsp.capabilities`                | `table` or `function(table)...end` | Modify the default LSP `capabilities` table                                                                                | `lsp/capabilities.lua`                  |
| `lsp.flags`                       | `table` or `function(table)...end` | Modify the default LSP `flags` table                                                                                       | `lsp/flags.lua`                         |
| `lsp.server_registration`         | `function(server, opts)...end`     | Modify the `lsp-installer` `server_registration` function                                                                  | `lsp/server_registration.lua`           |
| `lsp.formatting`                  | `table` or `function(table)...end` | Modify the formatting options described in the [LSP Configuration Page](../Recipes/advanced_lsp.md#controlling-formatting) | `lsp/formatting.lua`                    |
| `mason-lspconfig.setup_handlers`  | `table` or `function(table)...end` | Modify the setup handlers for `mason-lspconfig`                                                                            | `mason-lspconfig/setup_handlers.lua`    |
| `mason-null-ls.setup_handlers`    | `table` or `function(table)...end` | Modify the setup handlers for `mason-null-ls`                                                                              | `mason-null-ls/setup_handlers.lua`      |
| `mason-nvim-dap.setup_handlers`   | `table` or `function(table)...end` | Modify the setup handlers for `mason-nvim-dap`                                                                             | `mason-nvim-dap/setup_handlers.lua`     |
